Add GRIST_USE_ENGINE_IO to CI test matrix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
       matrix:
         python-version: [3.9]
         node-version: [18.x]
+        transport: [ 'ws', 'eio' ]
         tests:
           - ':lint:python:client:common:smoke:'
           - ':server-1-of-2:'
@@ -32,9 +33,13 @@ jobs:
           - tests: ':lint:python:client:common:smoke:'
             node-version: 18.x
             python-version: '3.10'
+            transport: 'ws'
           - tests: ':lint:python:client:common:smoke:'
             node-version: 18.x
             python-version: '3.11'
+            transport: 'ws'
+    env:
+      GRIST_USE_ENGINE_IO: ${{ matrix.transport == 'eio' }}
     steps:
       - uses: actions/checkout@v3
 
