Set GRIST_USE_ENGINE_IO to 1 in Fly environment

--- a/buildtools/fly-template.toml
+++ b/buildtools/fly-template.toml
@@ -12,6 +12,7 @@ processes = []
   PERMITTED_CUSTOM_WIDGETS="calendar"
   GRIST_EXPERIMENTAL_PLUGINS="1"
   GRIST_SINGLE_ORG="docs"
+  GRIST_USE_ENGINE_IO="1"
   PORT = "8080"
   FLY_DEPLOY_EXPIRATION = "{FLY_DEPLOY_EXPIRATION}"
 
